# voter-bot

./: .envrc  .gitignore  generate.sh  graph.ipynb  graph.py  irv.py  main.py  pyproject.toml  report.py
